# sbv2-test-server

./: .env.example  .gitignore  README.md  app.py  inference.py  models_config.json  pyproject.toml  schema.py
scripts/: tts_client.py
tests/: test_inference.py  test_tts_stream.py
